--- a/SmartMoveWebApp/Views/Home/About.cshtml
+++ b/SmartMoveWebApp/Views/Home/About.cshtml
@@ -1,7 +1,76 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<!--== About Page Content Start ==-->
+<section id="about-area" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <!-- Section Title Start -->
+            <div class="col-lg-12">
+                <div class="section-title  text-center">
+                    <h2>About us</h2>
+                    <span class="title-line"><i class="fa fa-car"></i></span>
+                </div>
+            </div>
+            <!-- Section Title End -->
+        </div>
+
+        <div class="row">
+            <!-- About Content Start -->
+            <div class="col-lg-6">
+                <div class="display-table">
+                    <div class="display-table-cell">
+                        <div class="about-content">
+                            <p>The SmartMove is intended to be used in the field of transportation as an aid tool for service seekers (customers) and service providers (truck drivers) for moving things from one place to another in a cost-effective way.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- About Content End -->
+            <!-- About Video Start -->
+            <div class="col-lg-6">
+                <div class="about-image">
+                    <img src="~/Content/images/car/car-2.jpg" alt="JSOFT">
+                </div>
+            </div>
+            <!-- About Video End -->
+        </div>
+
+        <!-- About Fretutes Start -->
+        <div class="about-feature-area">
+            <div class="row">
+                <!-- Single Fretutes Start -->
+                <div class="col-lg-4">
+                    <div class="about-feature-item active">
+                        <i class="fa fa-car"></i>
+                        <h3>ALL BRANDS</h3>
+                        <p>Loremed ipsumed is a compnayes odsoyel dolor sit amet, consectetur adipisicing elit. Nesciunted all of.</p>
+                    </div>
+                </div>
+                <!-- Single Fretutes End -->
+                <!-- Single Fretutes Start -->
+                <div class="col-lg-4">
+                    <div class="about-feature-item">
+                        <i class="fa fa-car"></i>
+                        <h3>ALL BRANDS</h3>
+                        <p>Loremed ipsumed is a compnayes odsoyel dolor sit amet, consectetur adipisicing elit. Nesciunted all of.</p>
+                    </div>
+                </div>
+                <!-- Single Fretutes End -->
+                <!-- Single Fretutes Start -->
+                <div class="col-lg-4">
+                    <div class="about-feature-item">
+                        <i class="fa fa-car"></i>
+                        <h3>ALL BRANDS</h3>
+                        <p>Loremed ipsumed is a compnayes odsoyel dolor sit amet, consectetur adipisicing elit. Nesciunted all of.</p>
+                    </div>
+                </div>
+                <!-- Single Fretutes End -->
+            </div>
+        </div>
+        <!-- About Fretutes End -->
+    </div>
+</section>
+<!--== About Page Content End ==-->
