--- a/SmartMoveWebApp/Views/Home/Contact.cshtml
+++ b/SmartMoveWebApp/Views/Home/Contact.cshtml
@@ -1,17 +1,74 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<!--== Page Title Area Start ==-->
+<section id="page-title-area" class="section-padding overlay">
+    <div class="container">
+        <div class="row">
+            <!-- Page Title Start -->
+            <div class="col-lg-12">
+                <div class="section-title  text-center">
+                    <h2>Contact Us</h2>
+                    <span class="title-line"><i class="fa fa-car"></i></span>
+                </div>
+            </div>
+            <!-- Page Title End -->
+        </div>
+    </div>
+</section>
+<!--== Page Title Area End ==-->
+<!--== Contact Page Area Start ==-->
+<div class="contact-page-wrao section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-9 m-auto">
+                <div class="contact-form">
+                    <form action="index.html">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <div class="name-input">
+                                    <input type="text" placeholder="Full Name">
+                                </div>
+                            </div>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="email-input">
+                                    <input type="email" placeholder="Email Address">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <div class="website-input">
+                                    <input type="url" placeholder="Website">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6 col-md-6">
+                                <div class="subject-input">
+                                    <input type="text" placeholder="Subject">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="message-input">
+                            <textarea name="review" cols="30" rows="10" placeholder="Message"></textarea>
+                        </div>
+
+                        <div class="input-submit">
+                            <button type="submit">Submit Message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--== Contact Page Area End ==-->
+<!--== Map Area Start ==-->
+<div class="maparea">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3353.36528143936!2d-117.14978140544098!3d32.809085137415856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dbffdd7553b7e5%3A0x648e2461658371d0!2sNational+University+-+Kearny+Mesa%2C+California!5e0!3m2!1sen!2sus!4v1536283105892"></iframe>
+</div>
+<!--== Map Area End ==-->
