--- a/SmartMoveWebApp/Views/Home/BecomeDriver.cshtml
+++ b/SmartMoveWebApp/Views/Home/BecomeDriver.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "BecomeDriver";
+﻿@model SmartMoveWebApp.Models.ViewModels.RegisterDriverViewModel
+@{
+    ViewBag.Title = "Become a Driver";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,138 +12,128 @@
                 <div class="login-page-content">
                     <div class="login-form">
                         <h3>Become A Driver</h3>
-                        <form action="index.html">
+                        @using (Html.BeginForm("RegisterDriver", "TruckOwners"))
+                        {
+                            @Html.AntiForgeryToken()
+                            @Html.ValidationSummary("", new { @class = "danger" })
                             <div class="name">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <input type="text" placeholder="First Name">
+                                        <div class="form-group">
+                                            @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name" })
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <input type="text" placeholder="Last Name">
+                                        <div class="form-group">
+                                            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last Name" })
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="username">
-                                <input type="email" placeholder="Email">
-                            </div>
-                            <div class="username">
-                                <input type="text" placeholder="Username">
-                            </div>
-                            <div class="password">
-                                <input type="password" placeholder="Password">
-                            </div>
-                            <div class="username">
-                                <input type="text" placeholder="Phone Number">
-                            </div>
-                            <div class="username">
-                                <input type="text" placeholder="Address 1">
-                            </div>
-                            <div class="username">
-                                <input type="text" placeholder="Address 2">
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <input type="text" placeholder="Zip Code">
+                                <div class="form-group">
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email id" })
                                 </div>
-                                <div class="col-md-4">
-                                    <input type="text" placeholder="City">
+                            </div>
+                            <div class="username">
+                                <div class="form-group">
+                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
                                 </div>
-                                <div class="col-md-4">
-                                    <select>
-                                        <option value="AL">Alabama</option>
-                                        <option value="AK">Alaska</option>
-                                        <option value="AZ">Arizona</option>
-                                        <option value="AR">Arkansas</option>
-                                        <option value="CA" selected>California</option>
-                                        <option value="CO">Colorado</option>
-                                        <option value="CT">Connecticut</option>
-                                        <option value="DE">Delaware</option>
-                                        <option value="DC">District Of Columbia</option>
-                                        <option value="FL">Florida</option>
-                                        <option value="GA">Georgia</option>
-                                        <option value="HI">Hawaii</option>
-                                        <option value="ID">Idaho</option>
-                                        <option value="IL">Illinois</option>
-                                        <option value="IN">Indiana</option>
-                                        <option value="IA">Iowa</option>
-                                        <option value="KS">Kansas</option>
-                                        <option value="KY">Kentucky</option>
-                                        <option value="LA">Louisiana</option>
-                                        <option value="ME">Maine</option>
-                                        <option value="MD">Maryland</option>
-                                        <option value="MA">Massachusetts</option>
-                                        <option value="MI">Michigan</option>
-                                        <option value="MN">Minnesota</option>
-                                        <option value="MS">Mississippi</option>
-                                        <option value="MO">Missouri</option>
-                                        <option value="MT">Montana</option>
-                                        <option value="NE">Nebraska</option>
-                                        <option value="NV">Nevada</option>
-                                        <option value="NH">New Hampshire</option>
-                                        <option value="NJ">New Jersey</option>
-                                        <option value="NM">New Mexico</option>
-                                        <option value="NY">New York</option>
-                                        <option value="NC">North Carolina</option>
-                                        <option value="ND">North Dakota</option>
-                                        <option value="OH">Ohio</option>
-                                        <option value="OK">Oklahoma</option>
-                                        <option value="OR">Oregon</option>
-                                        <option value="PA">Pennsylvania</option>
-                                        <option value="RI">Rhode Island</option>
-                                        <option value="SC">South Carolina</option>
-                                        <option value="SD">South Dakota</option>
-                                        <option value="TN">Tennessee</option>
-                                        <option value="TX">Texas</option>
-                                        <option value="UT">Utah</option>
-                                        <option value="VT">Vermont</option>
-                                        <option value="VA">Virginia</option>
-                                        <option value="WA">Washington</option>
-                                        <option value="WV">West Virginia</option>
-                                        <option value="WI">Wisconsin</option>
-                                        <option value="WY">Wyoming</option>
-                                    </select>
+                            </div>
+                            <div class="username">
+                                <div class="form-group">
+                                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
+                                </div>
+                            </div>
+                            <div class="username">
+                                <div class="form-group">
+                                    @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", placeholder = "Phone Number" })
+                                </div>
+                            </div>
+                            <div class="username">
+                                <div class="form-group">
+                                    @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "Address Line 1" })
+                                </div>
+                            </div>
+                            <div class="username">
+                                <div class="form-group">
+                                    @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", placeholder = "Address Line 2" })
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <select name="data[User][category_id]" class="form-control" id="UserCategoryId">
-                                        <option value="">-Select Truck Type-</option>
-                                        <option value="22">Pickup Truck (at least 5.7 ft length truck bed) </option>
-                                        <option value="23">Cargo Van (230-280 sq. feet.)</option>
-                                        <option value="24">Standard Car</option>
-                                    </select>
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control", placeholder = "Zip Code" })
+                                    </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="text" placeholder="Truck Color">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.City, new { @class = "form-control", placeholder = "City" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="username">
+                                <div class="form-group">
+                                    @Html.TextBoxFor(m => m.State, new { @class = "form-control", placeholder = "State" })
+                                </div>
+                            </div>
+                            <div class="username">
+                                <div class="form-group">
+                                    @Html.DropDownListFor(m => m.TruckTypeId, Model.TruckTypes, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">
-                                    <input type="text" placeholder="Make">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.TruckMake, new { @class = "form-control", placeholder = "Truck Make" })
+                                    </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <input type="text" placeholder="Model">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.TruckModel, new { @class = "form-control", placeholder = "Truck Model" })
+                                    </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <input type="text" placeholder="Year">
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.TruckYear, new { @class = "form-control", placeholder = "Truck Year" })
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.LicensePlate, new { @class = "form-control", placeholder = "License Plate" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.TruckColor, new { @class = "form-control", placeholder = "Truck Color" })
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.DriverLicenseNumber, new { @class = "form-control", placeholder = "Driver License #" })
+                                    </div>
                                 </div>
                             </div>
                             <div class="username">
-                                <p>Driver's Licence:</p><input type="file" name="DriversLicence">
+                                <div class="form-group">
+                                    @Html.TextBoxFor(m => m.VehicleRegNumber, new { @class = "form-control", placeholder = "Vehicle Registration Number" })
+                                </div>
                             </div>
                             <div class="username">
-                                <p>Vehicle Registration:</p><input type="file" name="VehicleRegistration">
-                            </div>
-                            <div class="username">
-                                <p>Proof of Insurance:</p><input type="file" name="ProofofInsurance">
-                            </div>
-                            <div class="username">
-                                <p>Profile Picture:</p><input type="file" name="ProfilePicture">
+                                <div class="form-group">
+                                    @Html.TextBoxFor(m => m.DriverInsurancePolicy, new { @class = "form-control", placeholder = "Driver Insurance Policy Number" })
+                                </div>
                             </div>
                             <div class="log-btn">
-                                <button type="submit"><i class="fa fa-check-square"></i> Sign Up</button>
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-default">Sign up</button>
+                                </div>
                             </div>
-                        </form>
+                        }
                     </div>
                     <div class="create-ac">
                         <p>Have an account? <a href="@Url.Action("Login", "TruckOwners")">Sign In</a></p>
@@ -158,3 +149,14 @@
     </div>
 </section>
 <!--== Login Page Content End ==-->
+
+@section Scripts
+{
+    <script>
+        $(document).ready(function () {
+            $('#Phone').keyup(function () {
+                $(this).val($(this).val().replace(/(\d{3})\-?(\d{3})\-?(\d{4})/, '$1-$2-$3'))
+            });
+        });
+    </script>
+}
