--- a/SmartMoveWebApp/Views/Shared/_Layout.cshtml
+++ b/SmartMoveWebApp/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                             <div class="widget-body">
                                 <a href="@Url.Action("Index", "Home")"><img src="~/Content/images/Logo_SmartMove.PNG" alt="JSOFT"></a>
                                 <p>The SmartMove is intended to be used in the field of transportation as an aid tool for service seekers (customers) and service providers (truck drivers) for moving things from one place to another in a cost-effective way.</p>
-                                
+
                                 <ul class="get-touch">
                                     <li><i class="fa fa-map-marker"></i> 3678 Aero Ct, San Diego</li>
                                     <li><i class="fa fa-mobile"></i> +1 880 000 0008</li>
@@ -105,6 +105,7 @@
     <!--== Scroll Top Area End ==-->
 
     @Scripts.Render("~/bundles/libs")
+    @Scripts.Render("~/bundles/jqueryval")
     @RenderSection("scripts", required: false)
 </body>
 </html>
