--- a/SmartMoveWebApp/Views/Home/About.cshtml
+++ b/SmartMoveWebApp/Views/Home/About.cshtml
@@ -32,7 +32,7 @@
             <!-- About Video Start -->
             <div class="col-lg-6">
                 <div class="about-image">
-                    <img src="~/Content/images/car/car-2.jpg" alt="JSOFT">
+                    <img src="~/Content/images/about-us.jpg" alt="JSOFT">
                 </div>
             </div>
             <!-- About Video End -->
@@ -43,10 +43,10 @@
             <div class="row">
                 <!-- Single Fretutes Start -->
                 <div class="col-lg-4">
-                    <div class="about-feature-item active">
+                    <div class="about-feature-item">
                         <i class="fa fa-car"></i>
-                        <h3>ALL BRANDS</h3>
-                        <p>Loremed ipsumed is a compnayes odsoyel dolor sit amet, consectetur adipisicing elit. Nesciunted all of.</p>
+                        <h3>Convinient</h3>
+                        <p>Providing Customers and Truck Owners the power to get where they want to go.</p>
                     </div>
                 </div>
                 <!-- Single Fretutes End -->
@@ -54,8 +54,8 @@
                 <div class="col-lg-4">
                     <div class="about-feature-item">
                         <i class="fa fa-car"></i>
-                        <h3>ALL BRANDS</h3>
-                        <p>Loremed ipsumed is a compnayes odsoyel dolor sit amet, consectetur adipisicing elit. Nesciunted all of.</p>
+                        <h3>Within Budget</h3>
+                        <p>Flexible to customers to select the deal they want. Flexible to Truck Owners to work as their prefrence.</p>
                     </div>
                 </div>
                 <!-- Single Fretutes End -->
@@ -63,8 +63,8 @@
                 <div class="col-lg-4">
                     <div class="about-feature-item">
                         <i class="fa fa-car"></i>
-                        <h3>ALL BRANDS</h3>
-                        <p>Loremed ipsumed is a compnayes odsoyel dolor sit amet, consectetur adipisicing elit. Nesciunted all of.</p>
+                        <h3>Safe and Secure</h3>
+                        <p>Reliable and Secure delivery of your stuff.</p>
                     </div>
                 </div>
                 <!-- Single Fretutes End -->
