--- a/SmartMoveWebApp/Views/Home/Contact.cshtml
+++ b/SmartMoveWebApp/Views/Home/Contact.cshtml
@@ -19,7 +19,7 @@
 </section>
 <!--== Page Title Area End ==-->
 <!--== Contact Page Area Start ==-->
-<div class="contact-page-wrao section-padding">
+<div class="contact-page-wrap section-padding">
     <div class="container">
         <div class="row">
             <div class="col-lg-9 m-auto">
