--- a/SmartMoveWebApp/Views/Home/Index.cshtml
+++ b/SmartMoveWebApp/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
                             <p>SmartMove works according to the needs and requirement of the customers who request services and who accept a bids and provides to them data to make contact with qualified truck owners (and drivers) who provide the desired results. SmartMove makes sure that all goods remain in a safe condition during transit and they will be delivered safely at their destination.</p>
                             <div class="about-btn">
                                 <a href="#">Book Your Service</a>
-                                <a href="#">Contact Us</a>
+                                <a href="@Url.Action("Contact", "Home")">Contact Us</a>
                             </div>
                         </div>
                     </div>
