--- a/SmartMoveWebApp/Views/Shared/_Layout.cshtml
+++ b/SmartMoveWebApp/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                                 <li>@Html.ActionLink("Help", "Help", "Home")</li>
                                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                                 <li>@Html.ActionLink("Become a Driver", "BecomeDriver", "Home")</li>
+                                <li>@Html.ActionLink("Sign In", "Login", "Home")</li>
                             </ul>
                         </nav>
                     </div>
@@ -58,16 +59,16 @@
     <!--== Footer Area Start ==-->
     <section id="footer-area">
         <!-- Footer Widget Start -->
-        <div class="footer-widget-area">
+        <div class="footer-widget-area" style="padding: 30px;">
             <div class="container">
-                <div class="row">
+                <div class="row text-center">
                     <!-- Single Footer Widget Start -->
-                    <div class="col-lg-10">
+                    <div class="col-lg-12">
                         <div class="single-footer-widget">
                             <div class="widget-body">
                                 <a href="@Url.Action("Index", "Home")"><img src="~/Content/images/Logo_SmartMove.PNG" alt="JSOFT"></a>
                                 <p>The SmartMove is intended to be used in the field of transportation as an aid tool for service seekers (customers) and service providers (truck drivers) for moving things from one place to another in a cost-effective way.</p>
-
+                                
                                 <ul class="get-touch">
                                     <li><i class="fa fa-map-marker"></i> 3678 Aero Ct, San Diego</li>
                                     <li><i class="fa fa-mobile"></i> +1 880 000 0008</li>
