--- a/SmartMoveWebApp/Views/Customers/Register.cshtml
+++ b/SmartMoveWebApp/Views/Customers/Register.cshtml
@@ -11,7 +11,7 @@
             <div class="col-lg-5 col-md-8 m-auto">
                 <div class="login-page-content">
                     <div class="login-form">
-                        <h3>Become A Driver</h3>
+                        <h3>Sign up</h3>
                         @using (Html.BeginForm("Register", "Customers"))
                         {
                             @Html.AntiForgeryToken()
