--- a/SmartMoveWebApp/Views/Home/About.cshtml
+++ b/SmartMoveWebApp/Views/Home/About.cshtml
@@ -45,7 +45,7 @@
                 <div class="col-lg-4">
                     <div class="about-feature-item">
                         <i class="fa fa-car"></i>
-                        <h3>Convinient</h3>
+                        <h3>convenient</h3>
                         <p>Providing Customers and Truck Owners the power to get where they want to go.</p>
                     </div>
                 </div>
