--- a/SmartMoveWebApp/Views/Shared/_Layout.cshtml
+++ b/SmartMoveWebApp/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                                 <li>@Html.ActionLink("About", "About", "Home")</li>
                                 <li>@Html.ActionLink("Help", "Help", "Home")</li>
                                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                <li>@Html.ActionLink("Become a Driver", "BecomeDriver", "Home")</li>
+                                <li>@Html.ActionLink("Become a Driver", "BecomeDriver", "TruckOwners")</li>
                                 <li>@Html.ActionLink("Sign In", "Login", "Home")</li>
                             </ul>
                         </nav>
