--- a/SmartMoveWebApp/Views/TruckOwners/Homepage.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Homepage.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "Customer Dashboard";
+    ViewBag.Title = "Homepage";
     Layout = "~/Views/Shared/_UsersLayout.cshtml";
 }
 
-<!-- Profile Content start -->
+<!-- Dashboard Content start -->
 <div class="col-lg-9">
     <div class="tab-content" id="myTabContent">
-        <!-- Profile  start -->
+        <!-- Dashboard  start -->
         <div class="tab-pane fade show active" id="team_member_1" role="tabpanel" aria-labelledby="tab_item_1">
             <div class="row">
                 <div class="col-lg-12">
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <!-- Profile  End -->
+        <!-- Dashboard  End -->
     </div>
 </div>
-<!-- Profile Content End -->
+<!-- Dashboard Content End -->
