--- a/SmartMoveWebApp/Content/reset.css
+++ b/SmartMoveWebApp/Content/reset.css
@@ -111,12 +111,12 @@ ul li {
 
 ::-moz-selection {
     background-color: #fff;
-    color: #fab702;
+    color: #11939A;
 }
 
 ::selection {
     background-color: #fff;
-    color: #fab702;
+    color: #11939A;
 }
 
 /**
